<resources>
    <string name="app_name">LenovoCompetitionApp</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_home">主页</string>
    <string name="title_creative">创意设计</string>
    <string name="title_my">我的</string>
    <string name="hint_search">搜索你感兴趣的</string>
    <string name="query">查询</string>
    <string name="title_return">返回</string>
    <string name="reservation">预约</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="userNameHint">用户名</string>
    <string name="passwordHint">登录密码</string>
    <string name="userIdHint">用户ID</string>
    <string name="login">登录</string>
    <string name="autoLogin">自动登录</string>
    <string name="forget_password">记住密码</string>
    <string name="register">注册</string>
</resources>